into the flood again

--- a/fitst.html
+++ b/fitst.html
@@ -1,1 +1,10 @@
-we dont need no education
+<!DOCTYPE html>
+<html>
+<head>
+	<title>repo</title>
+</head>
+<body>
+	<h1>Drifting bodies</h1>
+	<h2>so i made a big mistake</h2>
+</body>
+</html>
